--- a/.github/workflows/cd-cd.yaml
+++ b/.github/workflows/cd-cd.yaml
@@ -12,7 +12,7 @@ env:
 
 jobs:
   build:
-    runs-on: debian-latest
+    runs-on: ubuntu-latest
 
     steps:
     - name: Check out code
@@ -25,7 +25,7 @@ jobs:
         path: install-fs.sh
   
   upload:
-    runs-on: debian-latest
+    runs-on: ubuntu-latest
 
     needs: build  # This ensures the 'build' job is completed before starting this job
 
