--- a/.github/workflows/cd-cd.yaml
+++ b/.github/workflows/cd-cd.yaml
@@ -11,32 +11,40 @@ env:
   AWS_REGION: us-west-2
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
+  install_and_package:
+    runs-on : ubuntu-latest
     steps:
-    - name: Check out code
-      uses: actions/checkout@v2
-
+    # - name: Install FreeSWITCH
+    #   run: |
+    #     ls
+    #     chmod +x install-fs.sh
+    #     sudo ./install-fs.sh
+    
+    # - name: Package FreeSWITCH
+    #   run: |
+    #     chmod +x package-fs.sh
+    #     ./package-fs.sh
+    
     - name: Upload artifact
       uses: actions/upload-artifact@v4
       with:
-        name: test-bash-file
-        path: install-fs.sh
+        name: freeswitch-package
+        path : install*.deb
+
   
-  upload:
-    runs-on: ubuntu-latest
+  # upload:
+  #   runs-on: ubuntu-latest
 
-    needs: build  # This ensures the 'build' job is completed before starting this job
+  #   needs: build  # This ensures the 'build' job is completed before starting this job
 
-    steps:
-    # Download zip file that was uploaded from the build stage
-    - name: Download artifact
-      uses: actions/download-artifact@v4
-      with:
-        name: test-bash-file
+  #   steps:
+  #   # Download zip file that was uploaded from the build stage
+  #   - name: Download artifact
+  #     uses: actions/download-artifact@v4
+  #     with:
+  #       name: test-bash-file
 
-    # Upload the zip file to the s3 bucket
-    - name: Copy files to the test-prod S3 bucket
-      run: |
-        aws s3 cp install-fs.sh s3://balian-repo-public/freeswitch/install-fs.sh
+  #   # Upload the zip file to the s3 bucket
+  #   - name: Copy files to the test-prod S3 bucket
+  #     run: |
+  #       aws s3 cp install-fs.sh s3://balian-repo-public/freeswitch/install-fs.sh
