--- a/.github/workflows/cd-cd.yaml
+++ b/.github/workflows/cd-cd.yaml
@@ -29,7 +29,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: freeswitch-package
-        path : install*.deb
+        path : install*.sh
 
   
   # upload:
