--- a/.github/workflows/cd-cd.yaml
+++ b/.github/workflows/cd-cd.yaml
@@ -14,6 +14,9 @@ jobs:
   install_and_package:
     runs-on : ubuntu-latest
     steps:
+    - name: Check out code
+      uses: actions/checkout@v2
+      
     - name: Install FreeSWITCH
       run: |
         ls
