--- a/.github/workflows/cd-cd.yaml
+++ b/.github/workflows/cd-cd.yaml
@@ -1,4 +1,4 @@
-name: Build and package freeswitch
+name: Build and Package FreeSWITCH
 
 on:
   push:
@@ -11,41 +11,47 @@ env:
   AWS_REGION: us-west-2
 
 jobs:
-  install_and_package:
-    runs-on : ubuntu-latest
-    steps:
-    - name: Check out code
-      uses: actions/checkout@v2
-      
-    - name: Install FreeSWITCH
-      run: |
-        ls
-        chmod +x install-fs.sh
-        sudo ./install-fs.sh
-    
-    - name: Package FreeSWITCH
-      run: |
-        chmod +x package-fs.sh
-        ./package-fs.sh
-    
-    - name: Upload FreeSWITCH .deb package as artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: freeswitch-deb-package
-        path: freeswitch_1.0.0_amd64.deb
+  build_and_package:
+    runs-on: ubuntu-latest
 
-  
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v2
+      
+      - name: Set up Docker Build Environment
+        run: |
+          docker run --rm -dit --name fs-build-env -v ${{ github.workspace }}:/workspace debian:bullseye bash
+          docker exec fs-build-env bash -c "apt-get update && apt-get install -y build-essential devscripts fakeroot wget"
+
+      - name: Install FreeSWITCH dependencies and build
+        run: |
+          docker exec fs-build-env bash -c "cd /workspace && chmod +x install-fs.sh && ./install-fs.sh"
+      
+      - name: Package FreeSWITCH
+        run: |
+          docker exec fs-build-env bash -c "cd /workspace && chmod +x package-fs.sh && ./package-fs.sh"
+      
+      - name: Extract the .deb package from Docker
+        run: |
+          docker cp fs-build-env:/workspace/freeswitch_1.0.0_amd64.deb ./
+          docker stop fs-build-env
+
+      - name: Upload FreeSWITCH .deb package as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: freeswitch-deb-package
+          path: freeswitch_1.0.0_amd64.deb
+
   upload_to_s3:
-      runs-on: ubuntu-latest
-      needs: install_and_package
-      steps:
-      # Download the .deb package artifact
+    runs-on: ubuntu-latest
+    needs: build_and_package
+
+    steps:
       - name: Download FreeSWITCH .deb package artifact
         uses: actions/download-artifact@v4
         with:
           name: freeswitch-deb-package
 
-      # Upload the .deb package to S3
       - name: Upload .deb package to S3
         run: |
           aws s3 cp freeswitch_1.0.0_amd64.deb s3://balian-repo-public/freeswitch/freeswitch_1.0.0_amd64.deb
